@@ -33,3 +33,15 @@ idea {
     }
 }
 
+compileJava {
+    options.forkOptions.jvmArgs += "--enable-preview"
+}
+
+mainClassName = "com.piotrglazar.ExampleRunner"
+tasks.withType(JavaCompile).each {
+    it.options.compilerArgs.add('--enable-preview')
+}
+
+test {
+    jvmArgs(['--enable-preview'])
+}
